Archive2/88/8b3f408a684216/output
main.cpp: In function 'int main()':
main.cpp:25:12: error: invalid operands of types '<unresolved overloaded function type>' and '<unresolved overloaded function type>' to binary 'operator<<'
   count << endl<<"a中没有比b大的数";
            ^
